--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 "discord.py" = "*"
-pymongo = "*"
+pymongo = {extras = ["srv"], version = "*"}
 python-dotenv = "*"
 
 [dev-packages]
